# agentic-dj-dissertation-thesis

./: .cache  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_llm.py  test_spotify.py
.streamlit/: config.toml
app/: app.py  bridge.py
app/components/: agent_trace.py  listener_state.py  now_playing.py  queue.py  start_session.py
docs/: index.html
memory/: MEMORY.md  bug_bpm_key_missing_ui.md  project_agdj_overview.md  project_known_limitations.md  user_profile.md
src/agentic_dj/agent/: loop.py  state.py  tools.py
src/agentic_dj/music/: camelot.py  deezer_client.py  getsongkey_client.py  lastfm_client.py  soundcharts_client.py  tags.py
src/agentic_dj/spotify/: client.py
tests/: test_camelot.py  test_deezer_client.py  test_getsongkey_client.py  test_lastfm.py  test_lastfm_client.py  test_llm.py  test_loop.py  test_music21.py  test_soundcharts_client.py  test_spotify_client.py  test_start_session.py  test_state.py  test_tags.py  test_tags_fallback.py  test_tools.py
